--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,18 +1,18 @@
 version: '2'
 services:
-    hovemanager-app:
-        image: hovemanager
-        environment:
-            - _JAVA_OPTIONS=-Xmx512m -Xms256m
-            - SPRING_PROFILES_ACTIVE=prod,swagger
-            - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
-            - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
-            - SPRING_DATASOURCE_URL=jdbc:mysql://hovemanager-mysql:3306/hovemanager?useUnicode=true&characterEncoding=utf8&useSSL=false
-            - JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
-            - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka
-            - SPRING_CLOUD_STREAM_KAFKA_BINDER_ZK_NODES=zookeeper
-        ports:
-            - 8080:8080
+#    hovemanager-app:
+#        image: hovemanager
+#        environment:
+#            - _JAVA_OPTIONS=-Xmx512m -Xms256m
+#            - SPRING_PROFILES_ACTIVE=prod,swagger
+#            - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
+#            - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
+#            - SPRING_DATASOURCE_URL=jdbc:mysql://hovemanager-mysql:3306/hovemanager?useUnicode=true&characterEncoding=utf8&useSSL=false
+#            - JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
+#            - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka
+#            - SPRING_CLOUD_STREAM_KAFKA_BINDER_ZK_NODES=zookeeper
+#        ports:
+#            - 8080:8080
     hovemanager-mysql:
         extends:
             file: mysql.yml
